# auditable-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: cli.py  config.py  guard.py  llm.py  loop.py  replay.py  tracing.py
agent/tools/: __init__.py  workplace.py
evals/: chart.py  run_evals.py  scenarios.yaml
evals/results/: qwen3.5-2b.json  qwen3.5-9b-uncensored-hauhaucs-aggressive.json  qwen3.6-35b-a3b-uncensored-hauhaucs-aggressive.json
tests/: test_guard.py  test_loop.py  test_protocol.py  test_suite_integrity.py
